--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "langchain": "^0.0.66"
   },
   "devDependencies": {
     "@types/node": "^18.15.13",
