--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "dotenv": "^16.0.3",
-    "langchain": "^0.0.66"
+    "langchain": "^0.0.67",
+    "typeorm": "^0.3.15"
   },
   "devDependencies": {
     "@types/node": "^18.15.13",
