--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.0",
+    "core-js": "^3.30.1",
     "dotenv": "^16.0.3",
     "langchain": "^0.0.68",
+    "node-fetch": "^3.3.1",
     "typeorm": "^0.3.15"
   },
   "devDependencies": {
