--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
     "core-js": "^3.30.1",
     "dotenv": "^16.0.3",
     "langchain": "^0.0.68",
