--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          NODE_OPTIONS: '--experimental-fetch'
         with:
-          milliseconds: 1000
+          github_token: ${{ secrets.GITHUB_TOKEN }}
