--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ inputs:
   github_token:
     description: 'github token'
     required: true
-  model: 
+  model_name: 
     description: 'OpenAI model name'
     default: 'gpt-3.5-turbo'
 
