--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
+    "@octokit/webhooks": "^11.0.0",
     "core-js": "^3.30.2",
     "dotenv": "^16.0.3",
     "langchain": "^0.0.72",
