Added temperature input support

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,3 +20,4 @@ jobs:
           NODE_OPTIONS: '--experimental-fetch'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          temperature: 0
