--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typeorm": "^0.3.15"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.15.13",
     "@typescript-eslint/parser": "^5.59.5",
     "@vercel/ncc": "^0.36.1",
