--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
+    "@octokit/webhooks-definitions": "^3.67.3",
     "core-js": "^3.30.2",
     "dotenv": "^16.0.3",
-    "langchain": "^0.0.70",
+    "langchain": "^0.0.72",
     "node-fetch": "^3.3.1",
     "typeorm": "^0.3.15"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.15.13",
     "@typescript-eslint/parser": "^5.59.5",
     "@vercel/ncc": "^0.36.1",
