--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "core-js": "^3.30.2",
     "dotenv": "^16.0.3",
     "langchain": "^0.0.72",
+    "minimatch": "^9.0.0",
     "node-fetch": "^3.3.1",
+    "parse-diff": "^0.11.1",
     "typeorm": "^0.3.15"
   },
   "devDependencies": {
