--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           temperature: 0
-          exclude_files: '*.js,*.json,*.md,*.yml'
+          exclude_files: '*.js, *.json, *.md, *.yml, *.js.map'
