--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,9 @@ inputs:
   github_token:
     description: 'github token'
     required: true
+  openai_api_key:
+    description: 'OpenAI API key'
+    required: true
   model_name: 
     description: 'OpenAI model name'
     default: 'gpt-3.5-turbo'
