--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -3,7 +3,6 @@ on: # rebuild any PRs and main branch changes
   pull_request:
     types:
       - labeled
-      - synchronize
 permissions:
   contents: read
   pull-requests: write
@@ -19,5 +18,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           openai_api_key: ${{ secrets.OPENAI_API_KEY }}
-          temperature: 0
+          model_temperature: 0
+          model_name: 'gpt-4'
           exclude_files: '*.js, *.json, *.md, *.yml, *.js.map'
