--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typescript-action",
   "version": "0.0.0",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "Use LLMs to perform automatic code reviews.",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
