--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -1,16 +1,14 @@
-name: 'build-test'
+name: 'code review'
 on: # rebuild any PRs and main branch changes
   pull_request:
+    types:
+      - labeled
+permissions:
+  contents: read
+  pull-requests: write
 jobs:
-  build: # make sure build/ci work properly
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - run: |
-          npm install
-      - run: |
-          npm run all
-  test: # make sure the action works on a clean machine without building
+  code-review: # make sure the action works on a clean machine without building
+    if: ${{ contains( github.event.label.name, 'AutoReview') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -20,5 +18,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           openai_api_key: ${{ secrets.OPENAI_API_KEY }}
-          temperature: 0
+          model_temperature: 0
+          model_name: 'gpt-4'
           exclude_files: '*.js, *.json, *.md, *.yml, *.js.map'
