--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: 'build'
 on: # rebuild any PRs and main branch changes
   pull_request:
+  push:
+    branches:
+      - main
 jobs:
   build: # make sure build/ci work properly
     runs-on: ubuntu-latest
