--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "bundle": "npm run format:write && npm run package",
     "ci-test": "jest",
     "coverage": "make-coverage-badge --output-path ./badges/coverage.svg",
-    "format:write": "prettier --write ./**/*.ts",
-    "format:check": "prettier --check ./**/*.ts",
+    "format:write": "prettier --write **/*.ts",
+    "format:check": "prettier --check **/*.ts",
     "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
     "package": "ncc build src/main.ts --license licenses.txt",
     "package:watch": "npm run package -- --watch",
